--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ flutter:
   assets:
     - assets/icons/logoinicio.png
     - assets/images/login_image.png
+    - assets/images/estacion_verde_disponible.png
 
 flutter_native_splash:
   # image: "assets/icons/logoinicio.png"
