--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.0
+  google_fonts: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -24,7 +25,6 @@ flutter:
   assets:
     - assets/icons/logoinicio.png
     - assets/images/login_image.png
-    - assets/images/estacion_verde_disponible.png
     - assets/images/
     - assets/icons/
 
