--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.3.0
   google_fonts: ^5.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
