--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_native_splash: ^2.3.0
   google_fonts: ^5.0.0
   intl: ^0.18.1
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
